--- a/News/Presentation/Discover/Discover.storyboard
+++ b/News/Presentation/Discover/Discover.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="23504" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Y6W-OH-hqX">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="23727" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Y6W-OH-hqX">
     <device id="retina6_3" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23506"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23721"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -18,7 +18,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="a1u-aV-NQu">
-                                <rect key="frame" x="0.0" y="62" width="402" height="40"/>
+                                <rect key="frame" x="0.0" y="124" width="402" height="40"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HIr-l3-FoA">
                                         <rect key="frame" x="0.0" y="0.0" width="54.666666666666664" height="40"/>
@@ -57,25 +57,25 @@
                                         </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="All" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3zR-wf-0aQ">
-                                        <rect key="frame" x="14.666666666666664" y="8.6666666666666714" width="25" height="23"/>
+                                        <rect key="frame" x="14.666666666666664" y="8.6666666666666572" width="25" height="23"/>
                                         <fontDescription key="fontDescription" name="Georgia" family="Georgia" pointSize="20"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Politics" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xY4-ZJ-XAl">
-                                        <rect key="frame" x="71.666666666666686" y="8.6666666666666714" width="65.333333333333314" height="23"/>
+                                        <rect key="frame" x="71.666666666666686" y="8.6666666666666572" width="65.333333333333314" height="23"/>
                                         <fontDescription key="fontDescription" name="Georgia" family="Georgia" pointSize="20"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Technology" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yqh-P0-lbV">
-                                        <rect key="frame" x="165" y="8.6666666666666714" width="102" height="23"/>
+                                        <rect key="frame" x="165" y="8.6666666666666572" width="102" height="23"/>
                                         <fontDescription key="fontDescription" name="Georgia" family="Georgia" pointSize="20"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Education" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KEl-ui-xvG">
-                                        <rect key="frame" x="294.66666666666669" y="8.6666666666666714" width="90.666666666666686" height="23"/>
+                                        <rect key="frame" x="294.66666666666669" y="8.6666666666666572" width="90.666666666666686" height="23"/>
                                         <fontDescription key="fontDescription" name="Georgia" family="Georgia" pointSize="20"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -140,7 +140,7 @@
                                 </constraints>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="2pS-oZ-20j">
-                                <rect key="frame" x="0.0" y="102" width="402" height="772"/>
+                                <rect key="frame" x="0.0" y="164" width="402" height="710"/>
                                 <color key="backgroundColor" name="NewsBackground"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ArticleTableViewCell" rowHeight="160" id="Zhj-BI-GoD" customClass="ArticleTableViewCell" customModule="News" customModuleProvider="target">
@@ -263,6 +263,7 @@
                                             <outlet property="authorLabel" destination="Glc-Wi-EOS" id="49y-M6-Tm5"/>
                                             <outlet property="categoryLabel" destination="g4P-45-3Az" id="27s-BP-nkx"/>
                                             <outlet property="contentLabel" destination="cIu-g8-Ifi" id="dTd-UK-C8I"/>
+                                            <outlet property="moreButton" destination="mSO-Ia-WAc" id="7Qe-fL-Rq1"/>
                                             <outlet property="placeholderImageView" destination="zQK-jt-ePR" id="0oh-uQ-caG"/>
                                             <outlet property="publishedAtLabel" destination="Ek0-dJ-yMS" id="iZS-xv-J9Z"/>
                                         </connections>
