--- a/News/Core/Commons/CircleButton/CircleButton.xib
+++ b/News/Core/Commons/CircleButton/CircleButton.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="23504" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="23727" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23506"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23721"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -26,25 +26,25 @@
                     <connections>
                         <action selector="touchDownButton:" destination="-1" eventType="touchDown" id="e8u-vA-qRx"/>
                         <action selector="touchUpInsideButton:" destination="-1" eventType="touchUpInside" id="TgC-ox-2XM"/>
-                        <action selector="touchUpOutside:" destination="-1" eventType="touchUpOutside" id="xs4-MJ-PrV"/>
+                        <action selector="touchUpOutsideButton:" destination="-1" eventType="touchUpOutside" id="xs4-MJ-PrV"/>
                     </connections>
                 </button>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bookmark.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="TYe-8X-brW">
-                    <rect key="frame" x="12.666666666666664" y="12.999999999999998" width="25" height="24.666666666666664"/>
+                    <rect key="frame" x="15" y="15.33333333333333" width="20" height="19.666666666666671"/>
                     <color key="tintColor" systemColor="labelColor"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="25" id="xEX-Vg-ow6"/>
-                        <constraint firstAttribute="width" constant="25" id="yrw-Ok-yra"/>
-                    </constraints>
                 </imageView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="w97-Tx-qSe"/>
             <color key="backgroundColor" name="NewsBackground"/>
             <constraints>
+                <constraint firstItem="TYe-8X-brW" firstAttribute="top" secondItem="5g8-bl-5ct" secondAttribute="top" constant="15" id="0q1-gE-CIb"/>
                 <constraint firstItem="HCv-MG-Vif" firstAttribute="leading" secondItem="w97-Tx-qSe" secondAttribute="leading" id="1Wy-vT-lLc"/>
-                <constraint firstItem="TYe-8X-brW" firstAttribute="centerX" secondItem="5g8-bl-5ct" secondAttribute="centerX" id="2CK-M8-UET"/>
-                <constraint firstItem="TYe-8X-brW" firstAttribute="centerY" secondItem="5g8-bl-5ct" secondAttribute="centerY" id="70d-IN-YFT"/>
+                <constraint firstAttribute="trailing" secondItem="TYe-8X-brW" secondAttribute="trailing" constant="15" id="5d0-M6-zz0"/>
+                <constraint firstItem="TYe-8X-brW" firstAttribute="leading" secondItem="5g8-bl-5ct" secondAttribute="leading" constant="15" id="Mv8-0S-3aS"/>
+                <constraint firstItem="TYe-8X-brW" firstAttribute="centerX" secondItem="5g8-bl-5ct" secondAttribute="centerX" id="SlY-DG-rSc"/>
+                <constraint firstItem="TYe-8X-brW" firstAttribute="centerY" secondItem="5g8-bl-5ct" secondAttribute="centerY" id="aKp-qx-N91"/>
                 <constraint firstItem="HCv-MG-Vif" firstAttribute="top" secondItem="5g8-bl-5ct" secondAttribute="top" id="fLJ-0i-D7j"/>
+                <constraint firstAttribute="bottom" secondItem="TYe-8X-brW" secondAttribute="bottom" constant="15" id="jIf-CC-hKe"/>
                 <constraint firstAttribute="bottom" secondItem="HCv-MG-Vif" secondAttribute="bottom" id="t99-uw-dVt"/>
                 <constraint firstItem="w97-Tx-qSe" firstAttribute="trailing" secondItem="HCv-MG-Vif" secondAttribute="trailing" id="zXm-0S-Uqr"/>
             </constraints>
