--- a/News/Presentation/Profile/Profile.storyboard
+++ b/News/Presentation/Profile/Profile.storyboard
@@ -5,6 +5,7 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23721"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -22,23 +23,36 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GdQ-Mu-l78" customClass="CategoryBar" customModule="News" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="118" width="393" height="40"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="UHd-Pg-Ibl"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" name="SurfaceLight"/>
                         <constraints>
+                            <constraint firstItem="GdQ-Mu-l78" firstAttribute="trailing" secondItem="vDu-zF-Fre" secondAttribute="trailing" id="AIG-Jm-W2l"/>
                             <constraint firstItem="WMQ-5G-XKJ" firstAttribute="centerY" secondItem="5EZ-qb-Rvc" secondAttribute="centerY" id="KJc-qX-Mcl"/>
+                            <constraint firstItem="GdQ-Mu-l78" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="MQ2-Xn-5JS"/>
+                            <constraint firstItem="GdQ-Mu-l78" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="ofA-sA-Wbh"/>
                             <constraint firstItem="WMQ-5G-XKJ" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="y9q-4G-Sdy"/>
                         </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="139" y="-2"/>
+            <point key="canvasLocation" x="138.1679389312977" y="-2.1126760563380285"/>
         </scene>
     </scenes>
     <resources>
         <namedColor name="SurfaceLight">
             <color red="0.96862745098039216" green="0.96862745098039216" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
     </resources>
 </document>
